# Succinct-TypingGame

./: Cargo.toml  index.html  wasm.js
src/: leaderboard.rs  lib.rs  sp1_proof.rs
